# mmem

./: ANALYSIS.md  Cargo.toml  README.md  agents.md  clippy.toml  plan.md
docs/: rust-patterns.md
plans/: 2025-01-28-mmem-analysis-fixes.md
src/: cli.rs  doctor.rs  index.rs  lib.rs  main.rs  model.rs  parse.rs  query.rs  scan.rs  session.rs  stats.rs  util.rs
tests/: doctor.rs  index.rs  parse.rs  query.rs  scan.rs  session.rs  stats.rs
tests/fixtures/: session.json  session.jsonl  session.md  session_toolcall_only.jsonl  session_tools.jsonl
